Class and HW changes

--- a/class-work/index.html
+++ b/class-work/index.html
@@ -1,1 +1,13 @@
-<h1>My class work directory!</h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>Class Work Directory</title>
+</head>
+
+<body>
+	<h1>My class work directory!</h1>
+</body>
+
+</html>
+
