--- a/index.html
+++ b/index.html
@@ -1,2 +1,43 @@
-<link rel="stylesheet" type="text/css" href="styles.css">
-<h1>Hello, World!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Gaby Bonet</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+
+<body>
+	<h1> Gaby Bonet</h1>
+
+	<h3> Why I'm Taking FEWD?</h3>
+	<p>
+		A few of the many reasons why I'm taking FEWD are:
+	</p>
+
+	<ul>
+		<li>I want to expand my knowledge within Digital Marketing</li>
+		<li>I want to gain more skills</li>
+		<li>I want to be able to build my own websites: hobby related,a resume, etc</li>
+		<li>I want to potentially expand my career using these new skills</li>
+	</ul>
+
+	<h3>GA Homework and Class</h3>
+
+	<p>
+		Homework
+	</p>
+
+	<ul>
+		<li><a href="homework/ga-press-release/index.html">Homework One - GA Press Release</a></li>
+	</ul>
+
+	<p>
+		Class Work
+	</p>
+
+	<ul>
+		<li><a href="class-work/cookie-recipe/index.html">Class-Work One - Cookie Recipe</a></li>
+	</ul>
+</body>
+</html>
+
+
