Homework and project

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -25,12 +25,33 @@
 			<h1>THERE'S NO LIMITS TO TRAVELING</h1>
 		</section>
 
-
 		<div class="coldspring">
-			<h4 class="cold">Cold Spring</h4>
+			<a href="#" class="cold">Cold Spring</a>
 		</div>
 
+		<div class="washington">
+			<a href="#" class="dc">Washington D.C</a>
+		</div>
 
+		<div class="new">
+			<a href="#" class="haven">New Haven</a>
+		</div>
+
+		<div class="nevada">
+			<a href="#" class="vegas">Las Vegas</a>
+		</div>
+
+		<div class="skytop">
+			<a href="#" class="lodge">Skytop Lodge</a>
+		</div>
+
+		<div class="disney">
+			<a href="#" class="world">Disney World</a>
+		</div>
 	</div>
 </body>
+
+<footer>
+	
+</footer>
 </html>
