--- a/class-work/light-box-example/index.html
+++ b/class-work/light-box-example/index.html
@@ -5,8 +5,14 @@
 </head>
 <body>
 
-	<img src="images/chicken-nose.png" alt="">
-	<img src="images/ghostly-zoots.png" alt="">
+	<a href="images/chicken-nose.png" data-lightbox="robots" data-title="chicken nose">
+		<img src="images/chicken-nose.png" alt="">
+	</a>
+
+	<a href="images/ghostly-zoots.png" data-lightbox="robots" data-title="ghostly zoots">
+		<img src="images/ghostly-zoots.png" alt="">
+	</a>
+
 	<img src="images/lil-mib.png" alt="">
 	<img src="images/loopy-lou.png" alt="">
 	<img src="images/mr-purple.png" alt="">
