--- a/final-project/index.html
+++ b/final-project/index.html
@@ -4,16 +4,17 @@
 	<title>Simple Travel</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <header>
 	<div class="container">
-		<h2 class="quote">Simple Travel</h2>
+		<a href="../final-project/index.html"><h2 class="quote">Simple Travel</h2></a>
 		<nav>
 			<a href="#">Travels</a>
-			<a href="#">Map</a>
+			<a href="../final-project/map.html">Map</a>
 			<a href="#">About</a>
 		</nav>
 	</div>
@@ -26,7 +27,7 @@
 		</section>
 
 		<div class="coldspring">
-			<a href="#" class="cold">Cold Spring</a>
+			<a href="../final-project/coldspring.html" class="cold">Cold Spring</a>
 		</div>
 
 		<div class="washington">
