--- a/class-work/google-maps-example/index.html
+++ b/class-work/google-maps-example/index.html
@@ -5,9 +5,12 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+	<div id="map"></div>
 
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD63Q-s4tjg8U_elV8UnQxxU_FdLe1X6fw"></script>
+
 	<script src="js/app.js"></script>
 </body>
 </html>
