--- a/final-project/map.html
+++ b/final-project/map.html
@@ -27,15 +27,15 @@
 		</section>
 	</div>
 
+	<br>
+	
 	<div id="map"></div>
-	<div id="clicked-state"></div>
 
-	<script src="js/jquery.js"></script>
- 	 <script src="js/raphael.js"></script>
-  	<script src="js/jquery.usmap.js"></script>
-
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD63Q-s4tjg8U_elV8UnQxxU_FdLe1X6fw"></script>
+  	<script src="js/app.js"></script>
 </body>
 
 <footer>
 	<div class="container">
-</footer
+</footer>
