--- a/final-project/travels.html
+++ b/final-project/travels.html
@@ -22,25 +22,35 @@
 
 <body>
 	<div class="container">
-		<section class="one">
-			<h1>THERE'S NO LIMITS TO TRAVELING</h1>
-		</section>
+	<br>
+	<div class="coldspring">
+			<a href="../final-project/coldspring.html" class="cold">Cold Spring</a>
+		</div>
 
-					<section id="intro" class="main">
-						<span class="icon fa-diamond major"></span>
-						<h2>What We're All About</h2>
-						<p>We're all about making travel simple for those of you who prefer <br/>public transportation, over cars. We're big believers that once<br />
-						you've decided to give yourself a break, whether it's for a long weekend or <br/>maybe some extra more days, you should be able to enjoy yourself<br> as fast as possible.We want to give you as much information,<br/> in a simple manner, for you to have a great head start</p>
+		<div class="washington">
+			<a href="#" class="dc">Washington D.C</a>
+		</div>
 
-						<br>
+		<div class="new">
+			<a href="#" class="haven">New Haven</a>
+		</div>
 
-						<a href="#" class="button">Learn More</a>
-						</ul>
-					</section>
-		
+		<div class="nevada">
+			<a href="#" class="vegas">Las Vegas</a>
+		</div>
+
+		<div class="skytop">
+			<a href="#" class="lodge">Skytop Lodge</a>
+		</div>
+
+		<div class="disney">
+			<a href="#" class="world">Disney World</a>
+		</div>
+	</div>
 </body>
-
 
 <footer>
 	<div class="container">
+	
 </footer>
+</html>
