--- a/final-project/coldspring.html
+++ b/final-project/coldspring.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <header>
@@ -27,11 +28,12 @@
 			<h1>COLD SPRING</h1>
 		</section>
 
+
 		<p>Cold Spring is a village in the town of Philipstown in Putnam County, 50 miles north of Manhattan, NY. The central area of the village is on the National Register of Historic Places due to its many well-preserved 19th-century buildings, constructed to accommodate workers at the nearby West Point Foundry. The town is a rural area steeped in history and rich in natural treasures. You can find anywhere from rolling hills, hikes and biking trails to antique shops, coffee houses and restaurants/bars with outdoor dining. 
 		</p>
 
 	<br>
-		<h3>Accomodation</h3>
+		<i class="material-icons">local hotel</i><h3>Accomodation</h3>
 			<p>Although Cold Spring is close to New York City you will be tempted to stay overnight, for which there are a variety of options. Right on the riverfront, the Hudson House Inn has been offering their services for over 160 years and remains a beloved place by many, On Main Street, the Pig Inn is the main Bed and Breakfast, where you can find individual decoarted rooms to your liking. The price for this hotels can start for as little as $60. Staying a little longer may afford you the opportunity to take part in the many socials, festivals and events. </p>
 		
 		<h3>Food</h3>
