--- a/final-project/index.html
+++ b/final-project/index.html
@@ -15,7 +15,7 @@
 		<nav>
 			<a href="../final-project/travels.html">Travels</a>
 			<a href="../final-project/map.html">Map</a>
-			<a href="#">About</a>
+			<a href="../final-project/about.html">About</a>
 		</nav>
 	</div>
 </header>
@@ -34,9 +34,10 @@
 
 						<br>
 
-						<a href="#" class="button">Learn More</a>
+						<a href="../final-project/about.html" class="button">Learn More</a>
 						</ul>
 					</section>
+	</div>
 		
 </body>
 
