--- a/final-project/map.html
+++ b/final-project/map.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<a href="../final-project/index.html"><h2 class="quote">Simple Travel</h2></a>
 		<nav>
-			<a href="#">Travels</a>
+			<a href="../final-project/travels.html">Travels</a>
 			<a href="../final-project/map.html">Map</a>
 			<a href="#">About</a>
 		</nav>
