--- a/final-project/coldspring.html
+++ b/final-project/coldspring.html
@@ -15,25 +15,57 @@
 	<div class="container">
 		<a href="../final-project/index.html"><h2 class="quote">Simple Travel</h2></a>
 		<nav>
-			<a href="#">Travels</a>
+			<a href="../final-project/travels.html">Travels</a>
 			<a href="../final-project/map.html">Map</a>
-			<a href="#">About</a>
+			<a href="../final-project/about.html">About</a>
 		</nav>
 	</div>
 </header>
 
 <body>
 	<div class="container">
-		<section class="springsub">
+<!-- 		<section class="springsub">
 			<h1>COLD SPRING</h1>
-		</section>
+		</section> -->
+
+
+<div class="slideshow-container">
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img class= "picture" src="img/coldspring2.jpg" style="width:960px">
+    <div class="text">Cold Spring</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img class= "picture" src="img/coldspring.jpg" style="width:960px">
+    <div class="text">Cold Spring</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img class= "picture" src="img/coldspring3.jpg" style="width:960px">
+    <div class="text">Cold Spring</div>
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
+
 
 
 		<p>Cold Spring is a village in the town of Philipstown in Putnam County, 50 miles north of Manhattan, NY. The central area of the village is on the National Register of Historic Places due to its many well-preserved 19th-century buildings, constructed to accommodate workers at the nearby West Point Foundry. The town is a rural area steeped in history and rich in natural treasures. You can find anywhere from rolling hills, hikes and biking trails to antique shops, coffee houses and restaurants/bars with outdoor dining. 
 		</p>
 
 	<br>
-		<i class="material-icons">local hotel</i><h3>Accomodation</h3>
+		<h3>Accomodation</h3>
 			<p>Although Cold Spring is close to New York City you will be tempted to stay overnight, for which there are a variety of options. Right on the riverfront, the Hudson House Inn has been offering their services for over 160 years and remains a beloved place by many, On Main Street, the Pig Inn is the main Bed and Breakfast, where you can find individual decoarted rooms to your liking. The price for this hotels can start for as little as $60. Staying a little longer may afford you the opportunity to take part in the many socials, festivals and events. </p>
 		
 		<h3>Food</h3>
@@ -42,9 +74,12 @@
 		<h3>Activities</h3>
 			<p>Aside from its old-fashioned features, Cold Spring's greatest attraction is its location. Surrounding the village are beautiful hiking trails in the Hudson Valley such as the classic Breakneck Ridge scramble and Bull Hill loop. The town is also has a very accessible riverfront environment composed of benches, walkways and a gazebo. You can also make your way to the river, where you can gaze over a beautiful view. Large parks and weekly summer music concerts transform the area into an  amazing retreat from Manhattan.</p>
 		<h3>Transportation</h3>
-			<p>An hour and fifteen minutes after you've left Manhattan— approximately 50 miles, all you have to do is hop on the Metro North Line to "Cold Spring".</p>
+			<p>An hour and fifteen minutes after you've left Manhattan - approximately 50 miles, all you have to do is hop on the Metro North Line to "Cold Spring".</p>
 
 	</div>
+
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  	<script src="js/slideshow.js"></script>
 </body>
 
 <footer>
