--- a/final-project/map.html
+++ b/final-project/map.html
@@ -15,7 +15,7 @@
 		<nav>
 			<a href="../final-project/travels.html">Travels</a>
 			<a href="../final-project/map.html">Map</a>
-			<a href="#">About</a>
+			<a href="../final-project/about.html">About</a>
 		</nav>
 	</div>
 </header>
